--- a/public/css/minified/style.css
+++ b/public/css/minified/style.css
@@ -78,5 +78,12 @@ p {
     margin: 0 140px;
 }
 
+.table-container {
+    display: flex;
+    width: 100%;
+    overflow: auto;
+    max-height: 575px;
+}
+
 
 /* ->Estilos generales */
