--- a/public/css/minified/style.css
+++ b/public/css/minified/style.css
@@ -38,9 +38,9 @@
     box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, .5);
 }
 
-.custom-control-label::before,
-.custom-control-label::after {
-    top: 1px;
+.custom-control-label {
+    display: flex;
+    align-items: center;
 }
 
 /* ->Sobreescribiendo los estilos de bootstrap */
